--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>19.0.2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.jfoenix</groupId>-->
+<!--            <artifactId>jfoenix</artifactId>-->
+<!--            <version>9.0.10</version> &lt;!&ndash; Check for the latest &ndash;&gt;-->
+<!--        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
         <dependency>
